Default the sti contact count and injury location to 0 when they are not part of the visit to support the JSON to DB mapping process in the DB
