# facilityAPI/controllers/Default.js
@@ -22,6 +22,19 @@ module.exports.getAllFacilities = function getAllFacilities (req, res, next) {
     });
 };
 
+module.exports.getAllSettlements = function getAllSettlements (req, res, next) {
+    Default.getAllSettlements(function(result) {
+        if (typeof result !== 'undefined') {
+            console.log(JSON.stringify(result))
+
+            res.setHeader('Content-Type', 'application/json');
+            res.end(JSON.stringify(result || {}, null, 2));
+        }
+        else
+            console.log("no Settlements found");
+        res.end();
+    });
+};
 
 module.exports.getAllCitizenships = function getAllCitizenships (req, res, next) {
     Default.getAllCitizenships(function(result) {
@@ -121,6 +134,20 @@ module.exports.getSupplementalsByDiagnosis = function getSupplementalsByDiagnosi
         }
         else
             console.log("no such diagnosis " + diagnosisId);
+        res.end();
+    });
+};
+
+module.exports.getFacilitiesBySettlement = function getFacilitiesBySettlement (req, res, next) {
+    var settlement = req.swagger.params['settlement'].value;
+    Default.getFacilitiesBySettlement(settlement, function(result) {
+        if (typeof result !== 'undefined') {
+            console.log(JSON.stringify(result))
+            res.setHeader('Content-Type', 'application/json');
+            res.end(JSON.stringify(result || {}, null, 2));
+        }
+        else
+            console.log("no such settlement " + settlement);
         res.end();
     });
 };
